# salt

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md
salt-front/: .gitignore  Cargo.toml  README.md  build.rs  clippy.json  clippy.toml  comprehensive_test  minimal_test  nested_hydration_test  runtime.c  runtime_win.c  test_combinators  test_malloc.salt  test_simple
salt-front/fuzz/: Cargo.toml
salt-front/fuzz/fuzz_targets/: compile_stress.rs
salt-front/scripts/: release.sh  saltc.rb  saturation_attack.sh
salt-front/src/: README.md  cli.rs  cli_build.rs  driver.rs  driver_tests.rs  evaluator.rs  fuzz_ast.rs  grammar.rs  grammar_tokens.rs  interpreter.rs  interpreter_helpers.rs  keywords.rs  lib.rs  main.rs  registry.rs  types.rs  z3_stub.rs
salt-front/src/cli_fmt/: format.rs  mod.rs  post.rs  spacing.rs  tests.rs
salt-front/src/codegen/: README.md  abi.rs  collector.rs  const_eval.rs  context.rs  emit_helpers.rs  emit_hir.rs  entity_registry.rs  generic_resolver.rs  generic_unify.rs  interleaved_gen.rs  mod.rs  module_loader.rs  scan_types.rs  seeker.rs  seeker_resolve.rs  shader.rs  struct_deriver.rs  tests_cf_br_backedge.rs  tests_chase_lev_verification.rs  tests_cross_module_struct.rs  tests_datalayout.rs  tests_ebr_verification.rs  tests_fast_math_reduction.rs  tests_ffi.rs  tests_fn_ptr.rs  tests_forward_ref.rs  tests_generic_enum_match.rs  tests_generic_resolver.rs  tests_iterator_combinators.rs  tests_iterator_protocol.rs  tests_kernel_halt.rs  tests_kernel_unsafe.rs  tests_main_entry.rs  tests_malloc_arg_escape.rs  tests_malloc_tracking.rs  tests_match_destructuring.rs  tests_method_receiver.rs  tests_mixed_width_struct.rs  tests_negative_verification.rs  (+31 more)
salt-front/src/common/: mangling.rs  mod.rs
salt-front/src/grammar/: README.md  attr.rs  expr_utils.rs  pattern.rs
salt-front/src/hir/: async_lower.rs  expr.rs  ids.rs  items.rs  lower.rs  mod.rs  scope.rs  stmt.rs  typeck.rs  types.rs  vc.rs
salt-front/src/passes/: comptime.rs
salt-front/std/: README.md  comptime.salt  io.salt  log.salt  mod.salt  net.salt  prelude.salt  status.salt  string.salt  syscalls.salt  test.salt  time.salt
salt-front/std/arena/: default.salt
salt-front/std/args/: args.salt
salt-front/std/autograd/: mod.salt
salt-front/std/channel/: channel.salt
salt-front/std/collections/: hash_map.salt  slab.salt  string_map.salt  vec.salt
salt-front/std/contracts/: bounds.salt  collections.salt
salt-front/std/core/: alloc.salt  arena.salt  boxed.salt  buffer.salt  clone.salt  conv.salt  drop.salt  fmt.salt  iter.salt  mem.salt  node_ptr.salt  option.salt  ptr.salt  result.salt  slab_alloc.salt  slice.salt  str.salt
salt-front/std/crypto/: tls.salt  tls_bridge.c
salt-front/std/encoding/: encoding.salt
salt-front/std/env/: env.salt
salt-front/std/eq/: mod.salt
salt-front/std/fmt/: debug.salt  display.salt
salt-front/std/fs/: fs.salt
salt-front/std/hash/: mod.salt
salt-front/std/http/: client.salt  mod.salt  parser.salt  response.salt
salt-front/std/io/: buffered_reader.salt  buffered_writer.salt  file.salt  keuos_poller.salt  mod.salt  print.salt  reactor.salt  reactor_epoll.salt  reactor_keuos.salt  reactor_kqueue.salt  ring.salt  writer.salt
salt-front/std/ipc/: typed_channel.salt
salt-front/std/json/: json.salt
salt-front/std/linalg/: mod.salt
salt-front/std/math/: mod.salt
salt-front/std/mem/: allocator.salt  mod.salt
salt-front/std/net/: http_bridge.c  poller.salt  tcp.salt  tcp_native.salt  tcp_native_bridge.c
salt-front/std/nn/: activations.salt  loss.salt  mod.salt  ops.salt
salt-front/std/ord/: mod.salt
salt-front/std/os/: syscall.salt
salt-front/std/path/: path.salt
salt-front/std/process/: process.salt  spawn.salt
salt-front/std/random/: mod.salt
salt-front/std/regex/: regex.salt  regex_bridge.c
salt-front/std/simd/: mod.salt  text.salt
salt-front/std/sync/: rcu.salt  ring_buffer.salt  sync.salt
salt-front/std/sys/: mod.salt
salt-front/std/tensor/: mod.salt
salt-front/std/thread/: thread.salt
salt-front/tests/: alias_scope_test.rs  array_init_bug.salt  attribute_pulse.salt  bool_storage_test.rs  bounded_loop_termination.salt  canonical_resolution_test.rs  cli_test.rs  comptime_coverage.rs  const_integration.rs  cross_function_hydration_test.rs  debug_line_loc_test.rs  deterministic_ordering_test.rs  evaluator_test.rs  file_io_test.rs  fuzz_ast_test.rs  generate_widening.py  grammar_test.rs  incremental_coverage.rs  interpreter_smoke.rs  intrinsic_recognition_test.rs  keywords_test.rs  lib_test.rs  monomorphization_stress.rs  pointer_comparison.salt  println_test.rs  provenance_test.rs  pulse_test.salt  registry_test.rs  regression_test.rs  repro_all_types.rs  runner.rs  runtime_hardening_test.c  seeker_mangling_test.rs  slice_test.rs  ssa_dominance_test.rs  ssa_promotion_test.rs  string_write_test.rs  struct_fmt_test.rs  test_combinators.salt  test_formal_verification.salt  (+8 more)
salt-front/tests/cases/: affine_load.salt  affine_store.salt  all_types.salt  arrays.salt  attributes.salt  blocks.salt  bool_storage.salt  cmpxchg.salt  comprehensive.salt  comptime.salt  concepts.salt  const_exhaustive.salt  const_global.salt  control_flow.salt  coverage_advanced.salt  coverage_codegen.salt  coverage_complex.salt  coverage_edge.salt  coverage_pulse.salt  coverage_simple.salt  coverage_torture.salt  coverage_tuple_ptr.salt  coverage_wide.salt  display_test.salt  equality.salt  externs.salt  fail_atomics.salt  fail_binop.salt  fail_const_recursion.salt  fail_const_unknown.salt  fail_defensive_empty_array.salt  fail_defensive_field.salt  (+107 more)
salt-front/tools/: sanitize_mlir.py
salt-opt/: CMakeLists.txt  README.md  gauntlet.salt  hello_via_ll
salt-opt/src/: README.md  main.cpp
salt-opt/std/: test.salt
salt-opt/tests/: README.md  concept_basic.salt  concept_generic.salt  opt_option.salt  opt_option_test.salt  run_execution.py  verification_fail.salt  verification_pass.salt
tools/salt-build/: Cargo.toml
tools/salt-lsp/: Cargo.toml
tools/salt-wasm/: Cargo.toml
tools/sp/: Cargo.toml  README.md
(+605 files in other folders)
