[package]
name = "saltc"
version = "1.2.0"
description = "The Salt compiler — a systems language with Z3-powered compile-time verification"
repository = "https://github.com/bneb/lattice"
license = "MIT"
edition = "2021"

[[bin]]
name = "saltc"
path = "src/main.rs"

[lints.clippy]
# New in Rust 1.96 — many pre-existing instances, allow globally
collapsible_match = "allow"

[features]
default = ["z3-backend"]
z3-backend = ["dep:z3"]

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
anyhow = "1.0"
arbitrary = { version = "1.4.2", features = ["derive"] }
regex = "1.10"
z3 = { version = "0.12", optional = true }
z3-sys = "0.8"

[dev-dependencies]
insta = "1.0"
libfuzzer-sys = "0.4.10"
paste = "1.0.15"
tempfile = "3.24.0"
walkdir = "2.3"

# [lints.clippy] — Clippy Zero achieved. All 6 categories fixed:
#   too_many_arguments    → site-level #[allow] with REASON comments
#   type_complexity       → extracted type aliases (PromotionTable, MethodResolver, etc.)
#   large_enum_variant    → Box-wrapped ShapedTensor + GenericParam::Const
#   inherent_to_string    → Display impl for SynPath
#   collapsible_match/if  → 22 instances collapsed across 6 files

