[package]
name = "salt-front-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4", features = ["derive"] }

[dependencies.salt-front]
path = ".."

[[bin]]
name = "compile_stress"
path = "fuzz_targets/compile_stress.rs"
test = false
doc = false

