[package]
name = "sp"
version = "0.1.0"
edition = "2021"
description = "sp — Salt Packaging. Two keystrokes. Zero friction."

[[bin]]
name = "sp"
path = "src/main.rs"

[dependencies]
toml = "0.8"
toml_edit = "0.22"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
which = "8.0.4"
